@@ -1,71 +1,99 @@
-(defproject com.taoensso/sente "1.17.0"
+(defproject com.taoensso/sente "1.19.2"
   :author "Peter Taoussanis <https://www.taoensso.com>"
-  :description "Realtime web comms for Clojure/Script"
-  :url "https://github.com/ptaoussanis/sente"
-  :license {:name "Eclipse Public License"
-            :url  "http://www.eclipse.org/legal/epl-v10.html"
-            :distribution :repo
-            :comments "Same as Clojure"}
-  :min-lein-version "2.3.3"
-  :global-vars {*warn-on-reflection* true
-                *assert* true}
+  :description "Realtime web comms library for Clojure/Script"
+  :url "https://github.com/taoensso/sente"
+
+  :license
+  {:name "Eclipse Public License - v 1.0"
+   :url  "https://www.eclipse.org/legal/epl-v10.html"}
 
   :dependencies
-  [[org.clojure/core.async   "1.5.648"]
-   [com.taoensso/encore      "3.23.0"]
+  [[org.clojure/core.async   "1.6.673"]
+   [com.taoensso/encore      "3.62.1"]
    [org.java-websocket/Java-WebSocket "1.5.3"]
    [org.clojure/tools.reader "1.3.6"]
-   [com.taoensso/timbre      "5.2.1"]]
+   [com.taoensso/timbre      "6.2.2"]]
 
-  :plugins
-  [[lein-pprint    "1.3.2"]
-   [lein-ancient   "0.7.0"]
-   [lein-codox     "0.10.8"]
-   [lein-cljsbuild "1.1.8"]]
+  :test-paths ["test" #_"src"]
 
   :profiles
   {;; :default [:base :system :user :provided :dev]
-   :server-jvm {:jvm-opts ^:replace ["-server"]}
-   :provided {:dependencies [[org.clojure/clojure       "1.10.2"]
-                             [org.clojure/clojurescript "1.11.57"]]}
-   :1.8      {:dependencies [[org.clojure/clojure "1.8.0"]]}
-   :1.9      {:dependencies [[org.clojure/clojure "1.9.0"]]}
-   :1.10     {:dependencies [[org.clojure/clojure "1.10.2"]]}
-   :1.11     {:dependencies [[org.clojure/clojure "1.11.1"]]}
-   :depr     {:jvm-opts ["-Dtaoensso.elide-deprecated=true"]}
-   :dev      [:1.11 :test :server-jvm :depr]
-   :test     {:dependencies
-              [[com.cognitect/transit-clj  "1.0.329"]
-               [com.cognitect/transit-cljs "0.8.269"]
-               [org.clojure/test.check     "1.1.1"]
-               [http-kit         "2.6.0"]
-               [org.immutant/web "2.1.10"]
-               [nginx-clojure    "0.5.3"]
-               [aleph            "0.4.7"]
-               [macchiato/core   "0.2.22"]
-               [luminus/ring-undertow-adapter  "1.2.5"]
-               [info.sunng/ring-jetty9-adapter "0.17.6"]]}}
+   :provided {:dependencies [[org.clojure/clojurescript "1.11.60"]
+                             [org.clojure/clojure       "1.11.1"]]}
+   :c1.12    {:dependencies [[org.clojure/clojure       "1.12.0-alpha9"]]}
+   :c1.11    {:dependencies [[org.clojure/clojure       "1.11.1"]]}
+   :c1.10    {:dependencies [[org.clojure/clojure       "1.10.2"]]}
+
+   :graal-tests
+   {:source-paths ["test"]
+    :main taoensso.graal-tests
+    :aot [taoensso.graal-tests]
+    :uberjar-name "graal-tests.jar"
+    :dependencies
+    [[org.clojure/clojure                  "1.11.1"]
+     [com.github.clj-easy/graal-build-time "1.0.5"]]}
+
+   :community
+   {:dependencies
+    [[org.immutant/web               "2.1.10"]
+     [nginx-clojure                  "0.6.0"]
+     [aleph                          "0.6.3"]
+     [macchiato/core                 "0.2.23"] ; 0.2.24 seems to fail?
+     [luminus/ring-undertow-adapter  "1.3.1"]
+     [info.sunng/ring-jetty9-adapter "0.22.0"]]
+
+    ;; For nginx-clojure on Java 17+,
+    ;; Ref. https://github.com/nginx-clojure/nginx-clojure/issues/273
+    :jvm-opts
+    ["--add-opens=java.base/java.lang=ALL-UNNAMED"
+     "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED"
+     "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]}
+
+   :dev [:dev+ :community]
+   :dev+
+   {:jvm-opts ["-server" "-Dtaoensso.elide-deprecated=true"]
+    :global-vars
+    {*warn-on-reflection* true
+     *assert*             true
+     *unchecked-math*     false #_:warn-on-boxed}
+
+    :dependencies
+    [[com.cognitect/transit-clj  "1.0.333"]
+     [com.cognitect/transit-cljs "0.8.280"]
+     [org.clojure/test.check     "1.1.1"]
+     [http-kit                   "2.7.0"]]
+
+    :plugins
+    [[lein-pprint    "1.3.2"]
+     [lein-ancient   "0.7.0"]
+     [lein-cljsbuild "1.1.8"]
+     [com.taoensso.forks/lein-codox "0.10.10"]]
+
+    :codox
+    {:language #{:clojure :clojurescript}
+     :base-language :clojure}}}
 
   :cljsbuild
-  {:test-commands {"node"    ["node" :node-runner "target/main.js"]
-                   "phantom" ["phantomjs" :runner "target/main.js"]}
+  {:test-commands {"node" ["node" "target/test.js"]}
    :builds
    [{:id :main
      :source-paths ["src" "test"]
      :compiler     {:output-to "target/main.js"
                     :optimizations :advanced
-                    :pretty-print false}}]}
+                    :pretty-print false}}
 
-  :test-paths ["test" "src"]
+    {:id :test
+     :source-paths [#_"src" "test"]
+     :compiler
+     {:output-to "target/test.js"
+      :target :nodejs
+      :optimizations :simple}}]}
 
   :aliases
   {"start-dev"  ["with-profile" "+dev" "repl" ":headless"]
-   "build-once" ["cljsbuild" "once"]
-   "deploy-lib" ["do" "build-once," "deploy" "clojars," "install"]
-   "test-all"   ["do" "clean,"
-                 "with-profile" "+1.10:+1.9:+1.8"   "test,"
-                 "with-profile" "+test" "cljsbuild" "test"]}
+   "build-once" ["do" ["clean"] ["cljsbuild" "once"]]
+   "deploy-lib" ["do" ["build-once"] ["deploy" "clojars"] ["install"]]
 
-  :repositories
-  {"sonatype-oss-public"
-   "https://oss.sonatype.org/content/groups/public/"})
+   "test-clj"   ["with-profile" "+c1.12:+c1.11:+c1.10" "test"]
+   "test-cljs"  ["with-profile" "+c1.12" "cljsbuild"   "test"]
+   "test-all"   ["do" ["clean"] ["test-clj"] ["test-cljs"]]})
